--- a/app/web/index.html
+++ b/app/web/index.html
@@ -143,8 +143,14 @@
 
   <style>
     .nexo-flex-row {
-      display: flex;
+      display: inline-flex;
       flex-direction: row;
+      overflow: auto;
+    }
+
+    .nexo-flex-col {
+      display: inline-flex;
+      flex-direction: column;
     }
   </style>
 </head>
