--- a/app/web/index.html
+++ b/app/web/index.html
@@ -145,11 +145,13 @@
     .nexo-flex-row {
       display: inline-flex;
       flex-direction: row;
+      flex: 0 0 content;
     }
 
     .nexo-flex-col {
       display: inline-flex;
       flex-direction: column;
+      flex: 0 0 content;
     }
   </style>
 </head>
