--- a/app/web/index.html
+++ b/app/web/index.html
@@ -145,13 +145,37 @@
     .nexo-flex-row {
       display: inline-flex;
       flex-direction: row;
-      flex: 0 0 content;
+      /* flex: 0 0 content; */
     }
 
     .nexo-flex-col {
       display: inline-flex;
       flex-direction: column;
-      flex: 0 0 content;
+      /* flex: 0 0 content; */
+    }
+
+    .nexo-justify-start {
+      justify-content: start;
+    }
+
+    .nexo-justify-center {
+      justify-content: center;
+    }
+
+    .nexo-justify-end {
+      justify-content: end;
+    }
+
+    .nexo-align-start {
+      align-items: start;
+    }
+
+    .nexo-align-center {
+      align-items: center;
+    }
+
+    .nexo-align-end {
+      align-items: end;
     }
   </style>
 </head>
