--- a/app/web/index.html
+++ b/app/web/index.html
@@ -155,7 +155,7 @@
     }
 
     .nexo-justify-start {
-      justify-content: start;
+      justify-content: flex-start;
     }
 
     .nexo-justify-center {
@@ -163,11 +163,11 @@
     }
 
     .nexo-justify-end {
-      justify-content: end;
+      justify-content: flex-end;
     }
 
     .nexo-align-start {
-      align-items: start;
+      align-items: flex-start;
     }
 
     .nexo-align-center {
@@ -175,7 +175,7 @@
     }
 
     .nexo-align-end {
-      align-items: end;
+      align-items: flex-end;
     }
   </style>
 </head>
