--- a/app/web/index.html
+++ b/app/web/index.html
@@ -178,6 +178,11 @@
       align-items: flex-end;
     }
   </style>
+  <script>
+    function do_something(nodeRef) {
+      console.log('Do something', nodeRef);
+    }
+  </script>
 </head>
 
 <body>
