--- a/app/web/index.html
+++ b/app/web/index.html
@@ -226,6 +226,10 @@
       // modes
       await init();
       greet();
+      // const h = Hola.new("nexo-root");
+      // window.pepe = function pepe() {
+      //   console.log('HOLA');
+      // }
     }
 
     run();
